--- a/app.json
+++ b/app.json
@@ -1,14 +1,15 @@
 {
   "expo": {
-    "name": "myApp",
-    "slug": "myApp",
-    "version": "1.0.0",
+    "name": "Sport Bar",
+    "slug": "sport-bar",
+    "scheme": "sportbar",
     "orientation": "portrait",
+    "platforms": ["ios", "android", "web"],
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/splash-icon.png",
+      "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -16,13 +17,23 @@
       "supportsTablet": true
     },
     "android": {
+      "package": "com.yourcompany.sportbar",
+      "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       }
     },
     "web": {
-      "favicon": "./assets/favicon.png"
-    }
+      "favicon": "./assets/icon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "0a0f7d86-7f39-421a-8238-691cffab74b2"
+      }
+    },
+    "plugins": [
+      "expo-router"
+    ]
   }
 }
