--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-av": "~15.0.2",
     "expo-checkbox": "~4.0.1",
     "expo-device": "~7.0.3",
+    "expo-image": "~2.0.7",
     "expo-linear-gradient": "~14.0.2",
     "expo-notifications": "~0.29.14",
     "expo-router": "~4.0.20",
@@ -24,11 +25,11 @@
     "moti": "^0.30.0",
     "react": "18.3.1",
     "react-native": "0.76.9",
-    "expo-image": "~2.0.7",
     "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@expo/webpack-config": "^19.0.1",
     "@react-native-community/cli": "^18.0.0"
   },
   "private": true,
